Added doc for courses
