# go_api/docs/swagger.json
@@ -250,6 +250,85 @@
                 }
             }
         },
+        "/courses": {
+            "get": {
+                "description": "Returns list of all courses sorted by course code",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "Get all courses",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.PaginatedCoursesResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Creates a new course.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "courses"
+                ],
+                "summary": "Create course",
+                "parameters": [
+                    {
+                        "description": "Course data",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateCourseRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.Course"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/groups": {
             "get": {
                 "produces": [
@@ -338,6 +417,37 @@
                 }
             }
         },
+        "dto.CreateCourseRequest": {
+            "type": "object",
+            "required": [
+                "course_code",
+                "course_coordinator",
+                "course_language",
+                "course_name",
+                "ects_points",
+                "leading_unit"
+            ],
+            "properties": {
+                "course_code": {
+                    "type": "integer"
+                },
+                "course_coordinator": {
+                    "type": "integer"
+                },
+                "course_language": {
+                    "type": "string"
+                },
+                "course_name": {
+                    "type": "string"
+                },
+                "ects_points": {
+                    "type": "integer"
+                },
+                "leading_unit": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.AcademicCalendarResponse": {
             "type": "object",
             "properties": {
@@ -408,6 +518,29 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Course": {
+            "type": "object",
+            "properties": {
+                "course_code": {
+                    "type": "integer"
+                },
+                "course_coordinator": {
+                    "type": "integer"
+                },
+                "course_language": {
+                    "type": "string"
+                },
+                "course_name": {
+                    "type": "string"
+                },
+                "ects_points": {
+                    "type": "integer"
+                },
+                "leading_unit": {
                     "type": "integer"
                 }
             }
@@ -484,6 +617,17 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Campus"
+                    }
+                }
+            }
+        },
+        "models.PaginatedCoursesResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Course"
                     }
                 }
             }
